@@ -1,3 +1,11 @@
+2002-05-08  Alan Modra  <amodra@bigpond.net.au>
+
+	* elf32-ppc.c (ppc_elf_create_got): New function.
+	(ppc_elf_create_dynamic_sections): Call ppc_elf_create_got before
+	_bfd_elf_create_dynamic_sections.  Correct .plt flags. 
+	(ppc_elf_check_relocs): Use ppc_elf_create_got in place of
+	_bfd_elf_create_got_section.
+
 2002-05-07  Alan Modra  <amodra@bigpond.net.au>
 
 	* elf-bfd.h (struct elf_backend_data): Add rela_normal.
